; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_bootspec.c_find_nonunique.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_bootspec.c_find_nonunique.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32*)* @find_nonunique to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_nonunique(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %9, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %3
  %13 = load i64, i64* %5, align 8
  %14 = icmp eq i64 %13, 0
  br label %15

15:                                               ; preds = %12, %3
  %16 = phi i1 [ true, %3 ], [ %14, %12 ]
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  %19 = load i32*, i32** %6, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %15
  %22 = load i64, i64* %5, align 8
  %23 = icmp eq i64 %22, 0
  br label %24

24:                                               ; preds = %21, %15
  %25 = phi i1 [ true, %15 ], [ %23, %21 ]
  %26 = zext i1 %25 to i32
  %27 = call i32 @assert(i32 %26)
  store i64 0, i64* %7, align 8
  br label %28

28:                                               ; preds = %36, %24
  %29 = load i64, i64* %7, align 8
  %30 = load i64, i64* %5, align 8
  %31 = icmp ult i64 %29, %30
  br i1 %31, label %32, label %39

32:                                               ; preds = %28
  %33 = load i32*, i32** %6, align 8
  %34 = load i64, i64* %7, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  store i32 0, i32* %35, align 4
  br label %36

36:                                               ; preds = %32
  %37 = load i64, i64* %7, align 8
  %38 = add i64 %37, 1
  store i64 %38, i64* %7, align 8
  br label %28

39:                                               ; preds = %28
  store i64 0, i64* %7, align 8
  br label %40

40:                                               ; preds = %76, %39
  %41 = load i64, i64* %7, align 8
  %42 = load i64, i64* %5, align 8
  %43 = icmp ult i64 %41, %42
  br i1 %43, label %44, label %79

44:                                               ; preds = %40
  store i64 0, i64* %8, align 8
  br label %45

45:                                               ; preds = %72, %44
  %46 = load i64, i64* %8, align 8
  %47 = load i64, i64* %5, align 8
  %48 = icmp ult i64 %46, %47
  br i1 %48, label %49, label %75

49:                                               ; preds = %45
  %50 = load i64, i64* %7, align 8
  %51 = load i64, i64* %8, align 8
  %52 = icmp ne i64 %50, %51
  br i1 %52, label %53, label %71

53:                                               ; preds = %49
  %54 = load i32*, i32** %4, align 8
  %55 = load i64, i64* %7, align 8
  %56 = getelementptr inbounds i32, i32* %54, i64 %55
  %57 = call i32 @boot_entry_title(i32* %56)
  %58 = load i32*, i32** %4, align 8
  %59 = load i64, i64* %8, align 8
  %60 = getelementptr inbounds i32, i32* %58, i64 %59
  %61 = call i32 @boot_entry_title(i32* %60)
  %62 = call i64 @streq(i32 %57, i32 %61)
  %63 = icmp ne i64 %62, 0
  br i1 %63, label %64, label %71

64:                                               ; preds = %53
  %65 = load i32*, i32** %6, align 8
  %66 = load i64, i64* %8, align 8
  %67 = getelementptr inbounds i32, i32* %65, i64 %66
  store i32 1, i32* %67, align 4
  %68 = load i32*, i32** %6, align 8
  %69 = load i64, i64* %7, align 8
  %70 = getelementptr inbounds i32, i32* %68, i64 %69
  store i32 1, i32* %70, align 4
  store i32 1, i32* %9, align 4
  br label %71

71:                                               ; preds = %64, %53, %49
  br label %72

72:                                               ; preds = %71
  %73 = load i64, i64* %8, align 8
  %74 = add i64 %73, 1
  store i64 %74, i64* %8, align 8
  br label %45

75:                                               ; preds = %45
  br label %76

76:                                               ; preds = %75
  %77 = load i64, i64* %7, align 8
  %78 = add i64 %77, 1
  store i64 %78, i64* %7, align 8
  br label %40

79:                                               ; preds = %40
  %80 = load i32, i32* %9, align 4
  ret i32 %80
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @streq(i32, i32) #1

declare dso_local i32 @boot_entry_title(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
